ply-3.4/example/test/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LNOT
    RSHIFT
    VOID
    UMINUS
    DIVEQUAL
    LSHIFT
    COLON
    MODEQUAL
    OUT
    XOR
    PLUSPLUS
    PERIOD
    PLUSEQUAL
    MINUSMINUS
    AND
    LBRACKET
    MINUSEQUAL
    BREAK
    CONTINUE
    NOT
    RBRACKET
    TIMESEQUAL
    OR
    MOD

Grammar

Rule 0     S' -> program
Rule 1     program -> program function_definition
Rule 2     program -> function_definition
Rule 3     function_definition -> head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 4     function_definition -> head LBRACE NEWLINE body RBRACE NEWLINE
Rule 5     head -> IDENTIFIER LPAREN argument_list RPAREN
Rule 6     head -> IDENTIFIER LPAREN RPAREN
Rule 7     argument_list -> argument_declaration
Rule 8     argument_list -> argument_declaration COMMA argument_list
Rule 9     argument_declaration -> IDENTIFIER
Rule 10    argument_declaration -> NUMBER
Rule 11    body -> body statement
Rule 12    body -> statement
Rule 13    statement -> assignment NEWLINE
Rule 14    statement -> multiple_assignment NEWLINE
Rule 15    statement -> parralel_assignment NEWLINE
Rule 16    statement -> if_block
Rule 17    statement -> if_block else_block
Rule 18    statement -> while_block NEWLINE
Rule 19    statement -> function_call NEWLINE
Rule 20    assignment -> IDENTIFIER EQUALS expression
Rule 21    multiple_assignment -> assignment
Rule 22    multiple_assignment -> IDENTIFIER EQUALS multiple_assignment
Rule 23    parralel_assignment -> assignment
Rule 24    parralel_assignment -> IDENTIFIER COMMA parralel_assignment COMMA expression
Rule 25    function_call -> IDENTIFIER LPAREN parameters_list RPAREN
Rule 26    function_call -> IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN
Rule 27    parameters_list -> IDENTIFIER
Rule 28    parameters_list -> NUMBER
Rule 29    parameters_list -> parameters_list COMMA IDENTIFIER
Rule 30    parameters_list -> parameters_list COMMA NUMBER
Rule 31    while_block -> WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
Rule 32    while_block -> WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
Rule 33    if_block -> IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
Rule 34    if_block -> IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
Rule 35    if_block -> IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
Rule 36    if_block -> IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 37    else_block -> ELSE LBRACE body RBRACE NEWLINE
Rule 38    else_block -> ELSE LBRACE NEWLINE body RBRACE NEWLINE
Rule 39    else_block -> ELSE NEWLINE LBRACE body RBRACE NEWLINE
Rule 40    else_block -> ELSE NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
Rule 41    condition_list -> condition
Rule 42    condition_list -> condition comb_symbol condition_list
Rule 43    comb_symbol -> LAND
Rule 44    comb_symbol -> LOR
Rule 45    condition -> IDENTIFIER comp_symbol IDENTIFIER
Rule 46    condition -> IDENTIFIER comp_symbol NUMBER
Rule 47    condition -> NUMBER comp_symbol IDENTIFIER
Rule 48    condition -> NUMBER comp_symbol NUMBER
Rule 49    comp_symbol -> LT
Rule 50    comp_symbol -> GT
Rule 51    comp_symbol -> LE
Rule 52    comp_symbol -> GE
Rule 53    comp_symbol -> EQ
Rule 54    comp_symbol -> NE
Rule 55    expression -> expression PLUS expression
Rule 56    expression -> expression MINUS expression
Rule 57    expression -> expression TIMES expression
Rule 58    expression -> expression DIVIDE expression
Rule 59    expression -> MINUS expression
Rule 60    expression -> NUMBER
Rule 61    expression -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 
BREAK                : 
COLON                : 
COMMA                : 8 24 24 29 30
CONTINUE             : 
DIVEQUAL             : 
DIVIDE               : 58
ELSE                 : 37 38 39 40
EQ                   : 53
EQUALS               : 20 22 26
GE                   : 52
GT                   : 50
IDENTIFIER           : 5 6 9 20 22 24 25 26 26 27 29 45 45 46 47 61
IF                   : 33 34 35 36
LAND                 : 43
LBRACE               : 3 4 31 32 33 34 35 36 37 38 39 40
LBRACKET             : 
LE                   : 51
LNOT                 : 
LOR                  : 44
LPAREN               : 5 6 25 26 31 32 33 34 35 36
LSHIFT               : 
LT                   : 49
MINUS                : 56 59
MINUSEQUAL           : 
MINUSMINUS           : 
MOD                  : 
MODEQUAL             : 
NE                   : 54
NEWLINE              : 3 3 3 4 4 13 14 15 18 19 31 32 32 33 34 34 35 35 36 36 36 37 38 38 39 39 40 40 40
NOT                  : 
NUMBER               : 10 28 30 46 47 48 48 60
OR                   : 
OUT                  : 
PERIOD               : 
PLUS                 : 55
PLUSEQUAL            : 
PLUSPLUS             : 
RBRACE               : 3 4 31 32 33 34 35 36 37 38 39 40
RBRACKET             : 
RPAREN               : 5 6 25 26 31 32 33 34 35 36
RSHIFT               : 
TIMES                : 57
TIMESEQUAL           : 
UMINUS               : 
VOID                 : 
WHILE                : 31 32
XOR                  : 
error                : 

Nonterminals, with rules where they appear

argument_declaration : 7 8
argument_list        : 5 8
assignment           : 13 21 23
body                 : 3 4 11 31 32 33 34 35 36 37 38 39 40
comb_symbol          : 42
comp_symbol          : 45 46 47 48
condition            : 41 42
condition_list       : 31 32 33 34 35 36 42
else_block           : 17
expression           : 20 24 55 55 56 56 57 57 58 58 59
function_call        : 19
function_definition  : 1 2
head                 : 3 4
if_block             : 16 17
multiple_assignment  : 14 22
parameters_list      : 25 26 29 30
parralel_assignment  : 15 24
program              : 1 0
statement            : 11 12
while_block          : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program function_definition
    (2) program -> . function_definition
    (3) function_definition -> . head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> . head LBRACE NEWLINE body RBRACE NEWLINE
    (5) head -> . IDENTIFIER LPAREN argument_list RPAREN
    (6) head -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 4

    head                           shift and go to state 1
    program                        shift and go to state 3
    function_definition            shift and go to state 2

state 1

    (3) function_definition -> head . NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> head . LBRACE NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 5
    LBRACE          shift and go to state 6


state 2

    (2) program -> function_definition .

    IDENTIFIER      reduce using rule 2 (program -> function_definition .)
    $end            reduce using rule 2 (program -> function_definition .)


state 3

    (0) S' -> program .
    (1) program -> program . function_definition
    (3) function_definition -> . head NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (4) function_definition -> . head LBRACE NEWLINE body RBRACE NEWLINE
    (5) head -> . IDENTIFIER LPAREN argument_list RPAREN
    (6) head -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 4

    head                           shift and go to state 1
    function_definition            shift and go to state 7

state 4

    (5) head -> IDENTIFIER . LPAREN argument_list RPAREN
    (6) head -> IDENTIFIER . LPAREN RPAREN

    LPAREN          shift and go to state 8


state 5

    (3) function_definition -> head NEWLINE . LBRACE NEWLINE body RBRACE NEWLINE

    LBRACE          shift and go to state 9


state 6

    (4) function_definition -> head LBRACE . NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 10


state 7

    (1) program -> program function_definition .

    IDENTIFIER      reduce using rule 1 (program -> program function_definition .)
    $end            reduce using rule 1 (program -> program function_definition .)


state 8

    (5) head -> IDENTIFIER LPAREN . argument_list RPAREN
    (6) head -> IDENTIFIER LPAREN . RPAREN
    (7) argument_list -> . argument_declaration
    (8) argument_list -> . argument_declaration COMMA argument_list
    (9) argument_declaration -> . IDENTIFIER
    (10) argument_declaration -> . NUMBER

    RPAREN          shift and go to state 11
    IDENTIFIER      shift and go to state 15
    NUMBER          shift and go to state 12

    argument_declaration           shift and go to state 14
    argument_list                  shift and go to state 13

state 9

    (3) function_definition -> head NEWLINE LBRACE . NEWLINE body RBRACE NEWLINE

    NEWLINE         shift and go to state 16


state 10

    (4) function_definition -> head LBRACE NEWLINE . body RBRACE NEWLINE
    (11) body -> . body statement
    (12) body -> . statement
    (13) statement -> . assignment NEWLINE
    (14) statement -> . multiple_assignment NEWLINE
    (15) statement -> . parralel_assignment NEWLINE
    (16) statement -> . if_block
    (17) statement -> . if_block else_block
    (18) statement -> . while_block NEWLINE
    (19) statement -> . function_call NEWLINE
    (20) assignment -> . IDENTIFIER EQUALS expression
    (21) multiple_assignment -> . assignment
    (22) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (23) parralel_assignment -> . assignment
    (24) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (33) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (36) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (32) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (25) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (26) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    IDENTIFIER      shift and go to state 21
    IF              shift and go to state 25
    WHILE           shift and go to state 18

    body                           shift and go to state 22
    parralel_assignment            shift and go to state 19
    assignment                     shift and go to state 23
    if_block                       shift and go to state 26
    function_call                  shift and go to state 17
    while_block                    shift and go to state 27
    statement                      shift and go to state 20
    multiple_assignment            shift and go to state 24

state 11

    (6) head -> IDENTIFIER LPAREN RPAREN .

    NEWLINE         reduce using rule 6 (head -> IDENTIFIER LPAREN RPAREN .)
    LBRACE          reduce using rule 6 (head -> IDENTIFIER LPAREN RPAREN .)


state 12

    (10) argument_declaration -> NUMBER .

    COMMA           reduce using rule 10 (argument_declaration -> NUMBER .)
    RPAREN          reduce using rule 10 (argument_declaration -> NUMBER .)


state 13

    (5) head -> IDENTIFIER LPAREN argument_list . RPAREN

    RPAREN          shift and go to state 28


state 14

    (7) argument_list -> argument_declaration .
    (8) argument_list -> argument_declaration . COMMA argument_list

    RPAREN          reduce using rule 7 (argument_list -> argument_declaration .)
    COMMA           shift and go to state 29


state 15

    (9) argument_declaration -> IDENTIFIER .

    COMMA           reduce using rule 9 (argument_declaration -> IDENTIFIER .)
    RPAREN          reduce using rule 9 (argument_declaration -> IDENTIFIER .)


state 16

    (3) function_definition -> head NEWLINE LBRACE NEWLINE . body RBRACE NEWLINE
    (11) body -> . body statement
    (12) body -> . statement
    (13) statement -> . assignment NEWLINE
    (14) statement -> . multiple_assignment NEWLINE
    (15) statement -> . parralel_assignment NEWLINE
    (16) statement -> . if_block
    (17) statement -> . if_block else_block
    (18) statement -> . while_block NEWLINE
    (19) statement -> . function_call NEWLINE
    (20) assignment -> . IDENTIFIER EQUALS expression
    (21) multiple_assignment -> . assignment
    (22) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (23) parralel_assignment -> . assignment
    (24) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (33) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (36) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (32) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (25) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (26) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    IDENTIFIER      shift and go to state 21
    IF              shift and go to state 25
    WHILE           shift and go to state 18

    body                           shift and go to state 30
    parralel_assignment            shift and go to state 19
    assignment                     shift and go to state 23
    if_block                       shift and go to state 26
    function_call                  shift and go to state 17
    while_block                    shift and go to state 27
    statement                      shift and go to state 20
    multiple_assignment            shift and go to state 24

state 17

    (19) statement -> function_call . NEWLINE

    NEWLINE         shift and go to state 31


state 18

    (31) while_block -> WHILE . LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (32) while_block -> WHILE . LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE

    LPAREN          shift and go to state 32


state 19

    (15) statement -> parralel_assignment . NEWLINE

    NEWLINE         shift and go to state 33


state 20

    (12) body -> statement .

    RBRACE          reduce using rule 12 (body -> statement .)
    IDENTIFIER      reduce using rule 12 (body -> statement .)
    IF              reduce using rule 12 (body -> statement .)
    WHILE           reduce using rule 12 (body -> statement .)


state 21

    (20) assignment -> IDENTIFIER . EQUALS expression
    (22) multiple_assignment -> IDENTIFIER . EQUALS multiple_assignment
    (24) parralel_assignment -> IDENTIFIER . COMMA parralel_assignment COMMA expression
    (25) function_call -> IDENTIFIER . LPAREN parameters_list RPAREN
    (26) function_call -> IDENTIFIER . EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    EQUALS          shift and go to state 34
    COMMA           shift and go to state 35
    LPAREN          shift and go to state 36


state 22

    (4) function_definition -> head LBRACE NEWLINE body . RBRACE NEWLINE
    (11) body -> body . statement
    (13) statement -> . assignment NEWLINE
    (14) statement -> . multiple_assignment NEWLINE
    (15) statement -> . parralel_assignment NEWLINE
    (16) statement -> . if_block
    (17) statement -> . if_block else_block
    (18) statement -> . while_block NEWLINE
    (19) statement -> . function_call NEWLINE
    (20) assignment -> . IDENTIFIER EQUALS expression
    (21) multiple_assignment -> . assignment
    (22) multiple_assignment -> . IDENTIFIER EQUALS multiple_assignment
    (23) parralel_assignment -> . assignment
    (24) parralel_assignment -> . IDENTIFIER COMMA parralel_assignment COMMA expression
    (33) if_block -> . IF LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (34) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (35) if_block -> . IF LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (36) if_block -> . IF LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE
    (31) while_block -> . WHILE LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE
    (32) while_block -> . WHILE LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE
    (25) function_call -> . IDENTIFIER LPAREN parameters_list RPAREN
    (26) function_call -> . IDENTIFIER EQUALS IDENTIFIER LPAREN parameters_list RPAREN

    RBRACE          shift and go to state 38
    IDENTIFIER      shift and go to state 21
    IF              shift and go to state 25
    WHILE           shift and go to state 18

    parralel_assignment            shift and go to state 19
    assignment                     shift and go to state 23
    if_block                       shift and go to state 26
    function_call                  shift and go to state 17
    while_block                    shift and go to state 27
    statement                      shift and go to state 37
    multiple_assignment            shift and go to state 24

state 23

    (13) statement -> assignment . NEWLINE
    (21) multiple_assignment -> assignment .
    (23) parralel_assignment -> assignment .

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 39

  ! NEWLINE         [ reduce using rule 21 (multiple_assignment -> assignment .) ]
  ! NEWLINE         [ reduce using rule 23 (parralel_assignment -> assignment .) ]


state 24

    (14) statement -> multiple_assignment . NEWLINE

    NEWLINE         shift and go to state 40


state 25

    (33) if_block -> IF . LPAREN condition_list RPAREN LBRACE body RBRACE NEWLINE
    (34) if_block -> IF . LPAREN condition_list RPAREN NEWLINE LBRACE body RBRACE NEWLINE
    (35) if_block -> IF . LPAREN condition_list RPAREN LBRACE NEWLINE body RBRACE NEWLINE
    (36) if_block -> IF . LPAREN condition_list RPAREN NEWLINE LBRACE NEWLINE body RBRACE NEWLINE

    LPAREN          shift and go to state 41


state 26

    (16) statement -> if_block .
    (17) statement -> if_block . else_block
    (37) else_block -> . ELSE LBRACE body RBRACE NEWLINE
    (38) else_block -> . ELSE LBRACE NEWLINE body RBRACE NEWLINE
    (39) else_block -> . ELSE NEWLINE LBRACE body RBRACE NEWLINE
    (40) else_block -> . ELSE NEWLINE LBRACE NEWLINE body RBRACE NEWLINE

    RBRACE          reduce using rule 16 (statement -> if_block .)
    IDENTIFIER      reduce using rule 16 (statement -> if_block .)
    IF              reduce using rule 16 (statement -> if_block .)
    WHILE           reduce using rule 16 (statement -> if_block .)
    ELSE            shift and go to state 42

    else_block                     shift and go to state 43

state 27

    (18) statement -> while_block . NEWLINE

    NEWLINE         shift and go to state 44


state 28

    (5) head -> IDENTIFIER LPAREN argument_list RPAREN .

    NEWLINE         reduce using rule 5 (head -> IDENTIFIER LPAREN argument_list RPAREN .)
    LBRACE          reduce using rule 5 (head -> IDENTIFIER LPAREN argument_list RPAREN .)


state 29

    (8) argument_list -> argument_declaration COMMA . argument_list
    (7) argument_list -> . argument_declaration
    (8) argument_list -> . argument_declaration COMMA argument_list
    (9) argument_declaration -> . IDENTIFIER
    (10) argument_declaration -> . NUMBER

    IDENTIFIER      shift and go to state 15
    NUMBER          shift and go to state 12

    argument_declaration           shift and go to state 14
    argument_list                  shift and go to state 45

state 30
